validate checks before showing text, and enter key

--- a/frege/logic/templates/logic/deduction.html
+++ b/frege/logic/templates/logic/deduction.html
@@ -58,6 +58,10 @@
                     hideText(me);
                 }
             } else {
+                hideText(me);
+                if (!validateSelection(1)) {
+                    return;
+                }
                 showText(me);
             }
         });
