--- a/frege/logic/static/logic/css/mycss.css
+++ b/frege/logic/static/logic/css/mycss.css
@@ -107,4 +107,5 @@ body {
   width: 100%;
   /* Set the fixed height of the footer here */
   height: 60px;
+  /*border-top: 1px solid rgb(233,233,233);*/
 }
