added noselect class to deduction divs

--- a/frege/logic/templates/logic/deduction.html
+++ b/frege/logic/templates/logic/deduction.html
@@ -20,18 +20,18 @@
     </table>
     <div class="page-header" style="margin-top: 5px; margin-bottom: 10px;">
     </div>
-    <div>
+    <div class="noselect">
       <button class="btn btn-default dd-btn" id="imp-e">E ⊃</button>
       <button class="btn btn-default dd-btn" id="con-e">E ·</button>
       <button class="btn btn-default dd-btn" id="dis-e">E ∨</button>
       <button class="btn btn-default dd-btn" id="neg-e">E ~</button>
     </div>
-    <div>
+    <div class="noselect">
       <button class="btn btn-default dd-btn" id="con-i">I ·</button>
       <button class="btn btn-default dd-btn" id="dis-i">I ∨</button>
     </div>
-    <div id="extra" style="visibility: hidden;">
-      <input type="text" id="extxt" style="margin-top: 10px;" class="" size="28" maxlength="30" autofocus>
+    <div class="noselect" id="extra" style="visibility: hidden;">
+      <input type="text" id="extxt" style="margin-top: 10px;" class="formal-txt" size="28" maxlength="30" autofocus>
       <label for="extxt" style="margin-left: 10px;">נוסחה</label>
       <div>
         <input type="button" class="btn sym-btn" id="neg" value="~"/>
