changed show/hide to opacity and a focus trick

--- a/frege/logic/templates/logic/deduction.html
+++ b/frege/logic/templates/logic/deduction.html
@@ -30,8 +30,8 @@
       <button class="btn btn-default dd-btn" id="con-i">I ·</button>
       <button class="btn btn-default dd-btn" id="dis-i">I ∨</button>
     </div>
-    <div class="noselect" id="extra" style="visibility: hidden;">
-      <input type="text" id="extxt" style="margin-top: 10px;" class="formal-txt" size="28" maxlength="30" autofocus>
+    <div class="noselect" id="extra" style="opacity: 0;">
+      <input type="text" id="extxt" style="margin-top: 10px;" class="formal-txt" size="28" maxlength="30">
       <label for="extxt" style="margin-left: 10px;">נוסחה</label>
       <div>
         <input type="button" class="btn sym-btn" id="neg" value="~"/>
