--- a/frege/logic/static/logic/css/mycss.css
+++ b/frege/logic/static/logic/css/mycss.css
@@ -14,6 +14,11 @@ body {
     padding: 2px;
 }
 
+.btn {
+    /* cancel uppercase from theme */
+    text-transform: none;
+}
+
 input:-webkit-autofill {
     /* disable autofill color in chrome */
     -webkit-box-shadow: inset 0px -1px 0px 0px rgba(0, 0, 0, 0.075), inset 0 0 0 100px white !important;
@@ -81,6 +86,11 @@ input:-webkit-autofill {
     height: 30px;
     padding: 0px;
 }
+.dd-hyp {
+   height: 100%; 
+   border-left: 2px solid #777; 
+   padding-left: 10px;
+} 
 
 input[type=text], textarea {
   -webkit-transition: all 0.3s ease-in-out;
