--- a/frege/logic/templates/logic/deduction.html
+++ b/frege/logic/templates/logic/deduction.html
@@ -7,7 +7,7 @@
 {% block question_content %}
 
   <div dir="ltr">
-    <table id="deduction" class="">
+    <table id="deduction" class="" style="font-size: 110%;">
       <tbody>
         {% for premise in premises %}
         <tr>
@@ -27,6 +27,7 @@
       <button class="btn btn-default dd-btn" id="neg-e">E ~</button>
     </div>
     <div class="noselect">
+      <button class="btn btn-default dd-btn" id="imp-i">I ⊃</button>
       <button class="btn btn-default dd-btn" id="con-i">I ·</button>
       <button class="btn btn-default dd-btn" id="dis-i">I ∨</button>
     </div>
@@ -49,10 +50,6 @@
 
   <script>
     $(document).ready(function() {
-        // set nesting levels for premises
-        {% for premise in premises %}
-        nestings[{{forloop.counter}}] = 0;
-        {% endfor %} 
         $("#imp-e").click(function() {
             doApply($(this), impE, 2, symbolImpE);
         });
@@ -64,6 +61,9 @@
         });
         $("#neg-e").click(function() {
             doApply($(this), negE, 1, symbolNegE);
+        });
+        $("#imp-i").click(function() {
+            doApply($(this), impI, 0, symbolImpI);
         });
         $("#con-i").click(function() {
             doApply($(this), conI, 2, symbolConI);
