--- a/frege/logic/static/logic/css/mycss.css
+++ b/frege/logic/static/logic/css/mycss.css
@@ -107,6 +107,15 @@ input[type=text]:focus {
   border: 1px solid rgba(200,200,200,1);
 }
 
+/* for notifications */
+.note {
+  padding: 5px;
+  color: #555;
+  background-color: #eee;
+  border: 0px solid #666;
+  box-shadow: 0px 1px 4px #666;
+}
+
 /* text selection color */
 ::selection {
   background: #a8d1ff; /* WebKit/Blink Browsers */
