--- a/frege/logic/static/logic/css/mycss.css
+++ b/frege/logic/static/logic/css/mycss.css
@@ -114,6 +114,7 @@ input[type=text]:focus {
   background-color: #eee;
   border: 0px solid #666;
   box-shadow: 0px 1px 4px #666;
+  cursor: default;
 }
 
 /* text selection color */
