changed the order of the deduction rules buttons
cause im crazy

--- a/frege/logic/templates/logic/deduction.html
+++ b/frege/logic/templates/logic/deduction.html
@@ -21,16 +21,17 @@
     <div class="page-header" style="margin-top: 5px; margin-bottom: 10px;">
     </div>
     <div class="noselect">
-      <button class="btn btn-default dd-btn" id="imp-e">E ⊃</button>
+      <button class="btn btn-default dd-btn" id="neg-e">E ~</button>
       <button class="btn btn-default dd-btn" id="con-e">E ·</button>
       <button class="btn btn-default dd-btn" id="dis-e">E ∨</button>
+      <button class="btn btn-default dd-btn" id="imp-e">E ⊃</button>
       <button class="btn btn-default dd-btn" id="eqv-e">E ≡</button>
-      <button class="btn btn-default dd-btn" id="neg-e">E ~</button>
     </div>
     <div class="noselect">
-      <button class="btn btn-default dd-btn" id="imp-i">I ⊃</button>
+      <button class="btn btn-default dd-btn" id="neg-i">I ~</button>
       <button class="btn btn-default dd-btn" id="con-i">I ·</button>
       <button class="btn btn-default dd-btn" id="dis-i">I ∨</button>
+      <button class="btn btn-default dd-btn" id="imp-i">I ⊃</button>
       <button class="btn btn-default dd-btn" id="eqv-i">I ≡</button>
     </div>
     <div class="noselect">
