added negation introduction rule

--- a/frege/logic/templates/logic/deduction.html
+++ b/frege/logic/templates/logic/deduction.html
@@ -79,6 +79,9 @@
         $("#eqv-i").click(function() {
             doApply($(this), eqvI, 2, symbolEqvI);
         });
+        $("#neg-i").click(function() {
+            doApply($(this), negI, 0, symbolNegI);
+        });
         $("#hyp").click(function() {
             doApply($(this), hyp, 0, symbolHyp, true);
         });
