--- a/frege/logic/static/logic/css/mycss.css
+++ b/frege/logic/static/logic/css/mycss.css
@@ -86,11 +86,27 @@ input:-webkit-autofill {
     height: 30px;
     padding: 0px;
 }
+
+/* hypothesis vertical line */
 .dd-hyp {
    height: 100%; 
    border-left: 2px solid #777; 
    padding-left: 10px;
-} 
+}
+
+/* end of hypothesis horizontal dash */
+.dd-hyp-end {
+   position: relative;
+}
+.dd-hyp-end:after {
+  content:''; 
+  width:7px; 
+  height:2px; 
+  background:gray; 
+  position:absolute; 
+  bottom:0px;
+  left:0px;
+}
 
 input[type=text], textarea {
   -webkit-transition: all 0.3s ease-in-out;
