--- a/frege/logic/static/logic/css/mycss.css
+++ b/frege/logic/static/logic/css/mycss.css
@@ -102,7 +102,7 @@ input:-webkit-autofill {
   content:''; 
   width:7px; 
   height:2px; 
-  background:gray; 
+  background:#777; 
   position:absolute; 
   bottom:0px;
   left:0px;
