added opacity to navbar background

--- a/frege/logic/templates/logic/base.html
+++ b/frege/logic/templates/logic/base.html
@@ -2,7 +2,7 @@
 
 {% block body_content %}
     <!-- Fixed navbar -->
-    <nav class="navbar navbar-default navbar-fixed-top noselect">
+    <nav class="navbar navbar-default navbar-fixed-top noselect" style="background-color: rgba(255,255,255,0.9);">
       <div class="container">
         <div class="navbar-header pull-right">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
