--- a/frege/logic/static/logic/css/animate.cutdown.css
+++ b/frege/logic/static/logic/css/animate.cutdown.css
@@ -1,168 +1,6 @@
-@CHARSET "UTF-8";
+@charset "UTF-8";
 
-body {
-    /*background-color: #d2e8f0;*/
-    background-color: #F8F8F8;
-    padding-top: 65px; 
-    direction: rtl;
-    font-family: 'Alef', sans-serif;
-    font-size: large;
-    color: rgb(85,85,85) !important;
-}
-
-.table-condensed>thead>tr>th, .table-condensed>tbody>tr>th, .table-condensed>tfoot>tr>th, .table-condensed>thead>tr>td, .table-condensed>tbody>tr>td, .table-condensed>tfoot>tr>td{
-    padding: 2px;
-}
-
-.btn {
-    /* cancel uppercase from theme */
-    text-transform: none;
-}
-
-input:-webkit-autofill {
-    /* disable autofill color in chrome */
-    -webkit-box-shadow: inset 0px -1px 0px 0px rgba(0, 0, 0, 0.075), inset 0 0 0 100px white !important;
-}
-
-.formal {
-     font-family: 'Trirong', serif;
-}
-
-.mono {
-    font-family: 'Lucida Console', Monaco, monospace;
-}
-
-.errmsg {
-    font-size: 90%;
-    color: crimson;
-}
-
-.noselect {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    cursor: default;
-}
-
-.tt-notice {
-    color: crimson;
-    visibility: hidden;
-    opacity: 0.8;
-    font-size: 80%;
-    padding: 7px;
-}
-
-.tt-notice-correct {
-   /* color: crimson; */
-    visibility: visible;
-    opacity: 0.8;
-    font-size: 80%;
-    padding: 7px;
-}
-
-.dd-num {
-    padding-right: 5px;
-}
-.dd-just {
-    opacity: 0.55;
-    font-size: 88%;
-    padding-left: 33px;
-}
-.dd-btn {
-    font-size: 90%;
-    margin-top: 6px;
-    padding: 0px;
-    height: 36px;
-    width: 48px;
-}
-.sym-btn {
-    background-color: rgb(233,233,233);
-    font-size: 85%;
-    margin-top: 5px;
-    width: 30px;
-    height: 30px;
-    padding: 0px;
-}
-
-/* hypothesis vertical line */
-.dd-hyp {
-   height: 100%; 
-   border-left: 2px solid #777; 
-   padding-left: 10px;
-}
-
-/* end of hypothesis horizontal dash */
-.dd-hyp-end {
-   position: relative;
-}
-.dd-hyp-end:after {
-  content:''; 
-  width:7px; 
-  height:2px; 
-  background:#777; 
-  position:absolute; 
-  bottom:0px;
-  left:0px;
-}
-
-input[type=text], textarea {
-  -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  -ms-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  outline: none;
-  box-shadow: none;
-  border: 1px solid rgb(233,233,233);
-}
-
-input[type=text]:focus {
-  box-shadow: 0 0 2px rgba(200,200,200,1);
-  border: 1px solid rgba(200,200,200,1);
-}
-
-/* for notifications */
-.note {
-  padding: 5px;
-  color: #555;
-  background-color: #eee;
-  border: 0px solid #666;
-  box-shadow: 0px 1px 4px #666;
-  cursor: default;
-}
-
-/* text selection color */
-::selection {
-  background: #a8d1ff; /* WebKit/Blink Browsers */
-}
-::-moz-selection {
-  background: #a8d1ff; /* Gecko Browsers */
-}
-
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-  position: relative;
-  min-height: 100%;
-}
-body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
-}
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 60px;
-  /*border-top: 1px solid rgb(233,233,233);*/
-}
-
-/* Animations */
-
-/*
+/*!
  * animate.css -http://daneden.me/animate
  * Version - 3.5.1
  * Licensed under the MIT license - http://opensource.org/licenses/MIT
