--- a/frege/logic/templates/logic/deduction.html
+++ b/frege/logic/templates/logic/deduction.html
@@ -53,48 +53,6 @@
   </div>
 
   <script>
-    $(document).ready(function() {
-        $("#imp-e").click(function() {
-            doApply($(this), impE, 2, symbolImpE);
-        });
-        $("#con-e").click(function() {
-            doApply($(this), conE, 1, symbolConE);
-        });
-        $("#dis-e").click(function() {
-            doApply($(this), disE, 3, symbolDisE);
-        });
-        $("#eqv-e").click(function() {
-            doApply($(this), eqvE, 1, symbolEqvE);
-        });
-        $("#neg-e").click(function() {
-            doApply($(this), negE, 1, symbolNegE);
-        });
-        $("#imp-i").click(function() {
-            doApply($(this), impI, 0, symbolImpI);
-        });
-        $("#con-i").click(function() {
-            doApply($(this), conI, 2, symbolConI);
-        });
-        $("#dis-i").click(function() {
-            doApply($(this), disI, 1, symbolDisI, true);
-        });
-        $("#eqv-i").click(function() {
-            doApply($(this), eqvI, 2, symbolEqvI);
-        });
-        $("#neg-i").click(function() {
-            doApply($(this), negI, 0, symbolNegI);
-        });
-        $("#hyp").click(function() {
-            doApply($(this), hyp, 0, symbolHyp, true);
-        });
-        $("#rep").click(function() {
-            doApply($(this), rep, 1, symbolRep, false, true);
-        });
-        $("#rem").click(function() {
-            removeLine();
-            $(this).blur();
-        });
-    });
     function is_empty() {
         if (!$('input[name=choice]:checked', '#choices').val())
             return 'לא נבחרה תשובה';
@@ -108,5 +66,5 @@
     function notify_incorrect(data){return true;}
     function on_response(data){}
   </script>
-  <script src="{% static 'logic/js/deduction.js'%}"></script>
+  <script src="{% static 'logic/js/deduction.min.js'%}"></script>
 {% endblock question_content %} 
