--- a/frege/logic/static/logic/css/mycss.css
+++ b/frege/logic/static/logic/css/mycss.css
@@ -1,7 +1,6 @@
 @CHARSET "UTF-8";
 
 body {
-    /*background-color: #d2e8f0;*/
     background-color: #F8F8F8;
     padding-top: 65px; 
     direction: rtl;
@@ -56,7 +55,6 @@ input:-webkit-autofill {
 }
 
 .tt-notice-correct {
-   /* color: crimson; */
     visibility: visible;
     opacity: 0.8;
     font-size: 80%;
@@ -79,7 +77,7 @@ input:-webkit-autofill {
     width: 48px;
 }
 .sym-btn {
-    background-color: rgb(233,233,233);
+    background-color: #eee;
     font-size: 85%;
     margin-top: 5px;
     width: 30px;
@@ -115,12 +113,12 @@ input[type=text], textarea {
   -o-transition: all 0.3s ease-in-out;
   outline: none;
   box-shadow: none;
-  border: 1px solid rgb(233,233,233);
+  border: 1px solid #ddd;
 }
 
 input[type=text]:focus {
-  box-shadow: 0 0 2px rgba(200,200,200,1);
-  border: 1px solid rgba(200,200,200,1);
+  box-shadow: 0 0 2px #ccc;
+  border: 1px solid #ccc;
 }
 
 /* for notifications */
@@ -157,7 +155,6 @@ body {
   width: 100%;
   /* Set the fixed height of the footer here */
   height: 60px;
-  /*border-top: 1px solid rgb(233,233,233);*/
 }
 
 /* Animations */
