moved some styles from html to css

--- a/frege/logic/static/logic/css/mycss.css
+++ b/frege/logic/static/logic/css/mycss.css
@@ -24,7 +24,14 @@ input:-webkit-autofill {
 }
 
 .formal {
-     font-family: 'Trirong', serif;
+    font-family: 'Trirong', serif;
+    direction: ltr;
+}
+
+.formal-dsp {
+    font-size: 160%;
+    margin-top: -30px;
+    color: #222;
 }
 
 .mono {
