--- a/frege/logic/templates/logic/deduction.html
+++ b/frege/logic/templates/logic/deduction.html
@@ -34,7 +34,7 @@
       <button class="btn btn-default dd-btn" id="rem"><span class="glyphicon glyphicon-trash" style="margin-top: 6px;"></span></button>
     </div>
     <div class="noselect" id="extra" style="opacity: 0;">
-      <input type="text" id="extxt" style="margin-top: 10px;" size="28" maxlength="30">
+      <input type="text" id="extxt" style="margin-top: 10px;" size="28" maxlength="30" autocorrect="off" autocapitalize="none">
       <label for="extxt" style="margin-left: 10px;">נוסחה</label>
       <div>
         <input type="button" class="btn sym-btn" id="neg" value="~"/>
