added table-responsive for scrolling wide tables

--- a/frege/logic/templates/logic/truth_table.html
+++ b/frege/logic/templates/logic/truth_table.html
@@ -4,8 +4,7 @@
 {% block question_instruction %}טבלת אמת{% endblock %}
 
 {% block question_content %}
-
-  <div>
+  <div class="table-responsive">
     <table class="table table-bordered table-condensed table-hover noselect formal">
       <thead>
         <tr style="font-size: 110%;">
