--- a/frege/logic/static/logic/css/mycss.css
+++ b/frege/logic/static/logic/css/mycss.css
@@ -18,6 +18,13 @@ body {
     text-transform: none;
 }
 
+.btn.answered {
+  background-color: #bdf;
+}
+.btn.answered:hover {
+  background-color: #9cf;
+}
+
 input:-webkit-autofill {
     /* disable autofill color in chrome */
     -webkit-box-shadow: inset 0px -1px 0px 0px rgba(0, 0, 0, 0.075), inset 0 0 0 100px white !important;
@@ -136,6 +143,10 @@ input[type=text]:focus {
   border: 0px solid #666;
   box-shadow: 0px 1px 4px #666;
   cursor: default;
+}
+
+.note.ok {
+  background-color: #bdf;
 }
 
 /* text selection color */
