--- a/frege/logic/templates/logic/basic_base.html
+++ b/frege/logic/templates/logic/basic_base.html
@@ -40,7 +40,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="{% static 'logic/bootstrap/js/bootstrap.min.js'%}"></script>
     <script src="{% static 'logic/bootstrap/js/bootstrap-notify.min.js'%}"></script>
-    <script src="{% static 'logic/js/requests.min.js'%}"></script>
+    <script src="{% static 'logic/js/requests.js'%}"></script>
   </head>
 
   <body role="document">
