disable text selection for buttons

--- a/frege/logic/templates/logic/question_base.html
+++ b/frege/logic/templates/logic/question_base.html
@@ -10,7 +10,7 @@
         <p class="noselect"><b>{% block question_instruction %}{% endblock %}</b></p>
         {% block question_content %}
         {% endblock %}
-        <div style="padding: 5px;margin-top: 20px;">
+        <div class="noselect" style="padding: 5px;margin-top: 20px;">
           <button class="btn btn-default btn-lg" id="answer">אישור</button>
           <button class="btn btn-default answered btn-lg" style="visibility: hidden;" id="next">המשך</button>
           <button class="btn btn-primary btn-lg" style="visibility: hidden;" id="sum">סיום פרק</button>
